links on logo apple/google

--- a/index.html
+++ b/index.html
@@ -288,7 +288,8 @@
                 </div>
               </form>
               <div class="logoform">
-                <svg
+                <a href="https://ya.ru/">
+                  <svg
                   width="121"
                   height="36"
                   viewBox="0 0 121 36"
@@ -385,9 +386,10 @@
                     />
                   </g>
                   <defs></defs>
-                </svg>
+                </svg></a>
 
-                <svg
+                <a href="https://ya.ru/">
+                  <svg
                   width="121"
                   height="36"
                   viewBox="0 0 121 36"
@@ -464,7 +466,7 @@
                     />
                   </g>
                   <defs></defs>
-                </svg>
+                </svg></a>
               </div>
             </div>
           </div>
