--- a/index.html
+++ b/index.html
@@ -158,36 +158,79 @@
           <div class="part4">
             <h2>Проекты</h2>
             <div class="projects">
-              <img
+             <div class="project"> <img
                 class="prj"
                 src="./src/images/project001@2x.webp"
                 alt="prj001"
               />
-              <img
+            <p class="prj__text">
+              Тумба под телевизор
+              <svg width="13" height="13" viewBox="0 0 13 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+  <line x1="11.8684" y1="2.18556e-08" x2="11.8684" y2="12" stroke="white"/>
+  <line x1="12" y1="0.5" y2="0.5" stroke="white"/>
+  <line x1="11.722" y1="0.985145" x2="0.985134" y2="11.722" stroke="white"/>
+</svg>
+            </p></div>
+              <div class="project"><img
                 class="prj"
                 src="./src/images/project002@2x.webp"
                 alt="prj002"
-              />
-              <img
+              /><p class="prj__text">
+              Кухня
+              <svg width="13" height="13" viewBox="0 0 13 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+  <line x1="11.8684" y1="2.18556e-08" x2="11.8684" y2="12" stroke="white"/>
+  <line x1="12" y1="0.5" y2="0.5" stroke="white"/>
+  <line x1="11.722" y1="0.985145" x2="0.985134" y2="11.722" stroke="white"/>
+</svg>
+            </p></div>
+             <div class="project"><img
                 class="prj"
                 src="./src/images/project003@2x.webp"
                 alt="prj003"
-              />
-              <img
+              /><p class="prj__text">
+              Гостинная
+              <svg width="13" height="13" viewBox="0 0 13 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+  <line x1="11.8684" y1="2.18556e-08" x2="11.8684" y2="12" stroke="white"/>
+  <line x1="12" y1="0.5" y2="0.5" stroke="white"/>
+  <line x1="11.722" y1="0.985145" x2="0.985134" y2="11.722" stroke="white"/>
+</svg>
+            </p></div> 
+              <div class="project"><img
                 class="prj"
                 src="./src/images/project004@2x.webp"
                 alt="prj004"
-              />
-              <img
+              /><p class="prj__text">
+              Стенка
+              <svg width="13" height="13" viewBox="0 0 13 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+  <line x1="11.8684" y1="2.18556e-08" x2="11.8684" y2="12" stroke="white"/>
+  <line x1="12" y1="0.5" y2="0.5" stroke="white"/>
+  <line x1="11.722" y1="0.985145" x2="0.985134" y2="11.722" stroke="white"/>
+</svg>
+            </p></div>
+             <div class="project"> <img
                 class="prj"
                 src="./src/images/project005@2x.webp"
                 alt="prj005"
-              />
-              <img
+              /><p class="prj__text">
+              Кровать
+              <svg width="13" height="13" viewBox="0 0 13 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+  <line x1="11.8684" y1="2.18556e-08" x2="11.8684" y2="12" stroke="white"/>
+  <line x1="12" y1="0.5" y2="0.5" stroke="white"/>
+  <line x1="11.722" y1="0.985145" x2="0.985134" y2="11.722" stroke="white"/>
+</svg>
+            </p></div>
+             <div class="project"> <img
                 class="prj"
                 src="./src/images/project006@2x.webp"
                 alt="prj006"
-              />
+              /><p class="prj__text">
+              Тумба
+              <svg width="13" height="13" viewBox="0 0 13 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+  <line x1="11.8684" y1="2.18556e-08" x2="11.8684" y2="12" stroke="white"/>
+  <line x1="12" y1="0.5" y2="0.5" stroke="white"/>
+  <line x1="11.722" y1="0.985145" x2="0.985134" y2="11.722" stroke="white"/>
+</svg>
+            </p></div>
             </div>
           </div>
         </section>
